Added some useful links, added descriptions

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -36,7 +36,7 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/8/3 -->
-<!-- updated 2023/9/27 -->
+<!-- updated 2023/11/21 -->
 <h1>Fun and Useful Links to Elsewhere<span id="Fun-and-Useful-Links-to-Elsewhere"></span></h1>
 <details>
 <summary><span style="font-size: 130%;">Startpage Links</span></summary>
@@ -136,7 +136,11 @@
 <li><em>Useful reference guide to the obsolescent *NIX spreadsheet tool <code>sc</code>.</em></li>
 </ul>
 </li>
-<li><a href="https://kit.exposingtheinvisible.org/en/how/google-dorking.html">Guide to Google Dorking</a></li>
+<li><a href="https://kit.exposingtheinvisible.org/en/google-dorking.html">Guide to Google Dorking</a>
+<ul>
+<li><em>Taking advantage of lesser known Google search operators (dorking) to improve search results.</em></li>
+</ul>
+</li>
 <li><a href="https://barrelwisdom.com/blog/atelier-series-guide">Atelier Series Guide</a>
 <ul>
 <li><em>A guide for getting into GUST’s slice of life alchemy simulator JRPG series.</em></li>
@@ -154,10 +158,29 @@
 <li><em>Standard names for breadboard jumpers and crimp connections.</em></li>
 </ul>
 </li>
-<li><a href="https://www.logicalincrements.com/articles/graphicscardcomparison">Logical Increments: GPU Comparison</a></li>
+<li><a href="https://www.logicalincrements.com/articles/graphicscardcomparison">Logical Increments: GPU Comparison</a>
+<ul>
+<li><em>Relative power ranking of graphics cards released since 2010.</em></li>
+</ul>
+</li>
 <li><a href="https://old.reddit.com/r/rhythmgames/comments/w8cxcs/arcade_ic_card_faq/">Japanese Arcade IC card FAQ</a>
 <ul>
 <li><em>Westerner’s guide to IC cards for Japanese arcade games, Aime, e-Amusement, Banapass, NESiCA, etc.</em></li>
+</ul>
+</li>
+<li><a href="https://github.com/regdude/anal">Technical Guide to Anal</a> <span class="blink" style="color: #FFFF00;"><em>NSFW!</em></span>
+<ul>
+<li><em>Technical guide on the ins and outs of anal sex, exploring the mechanics of the male and female orgasm.</em></li>
+</ul>
+</li>
+<li><a href="https://github.com/regdude/anal"><code>regdude/anal</code></a> <span class="blink" style="color: #FFFF00;"><em>NSFW!</em></span>
+<ul>
+<li><em>Technical guide on the ins and outs of anal sex, exploring the mechanics of the male and female orgasm.</em></li>
+</ul>
+</li>
+<li><a href="https://github.com/ErikMcClure/bad-licenses">Bad Licenses</a>
+<ul>
+<li><em>A list of legally dubious and incomprensible “FOSS” software licenses found in the wild.</em></li>
 </ul>
 </li>
 </ul>
@@ -215,6 +238,11 @@
 <li><em>Browse the first ever web page, romanticized history and opinions on the creation of the WWW at CERN between 1989-1993.</em></li>
 </ul>
 </li>
+<li><a href="https://neal.fun/internet-artifacts/">Neal.fun: Internet Artifacts</a>
+<ul>
+<li><em>Interactive exhibit of cultural milestones in the early days of the World Wide Web.</em></li>
+</ul>
+</li>
 <li><a href="https://globe.adsbexchange.com/">ADS-B Exchange</a>
 <ul>
 <li><em>View live air traffic and aircraft flight paths in your area, or anywhere in the world.</em></li>
@@ -250,7 +278,7 @@
 </li>
 </ul>
 <p>A mix of my startpage links and random bookmarks you might find useful.<br/>
-Updated 🌑 Wed, Sep 27th, 2023</p>
+Updated 🌗 Tue, Nov 21st, 2023</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
