useful-links: added chrultrabook docs

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -36,7 +36,7 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/8/3 -->
-<!-- updated 2023/11/21 -->
+<!-- updated 2023/11/27 -->
 <h1>Fun and Useful Links to Elsewhere<span id="Fun-and-Useful-Links-to-Elsewhere"></span></h1>
 <details>
 <summary><span style="font-size: 130%;">Startpage Links</span></summary>
@@ -151,6 +151,11 @@
 <li><a href="https://mrchromebox.tech/#devices">MrChromebox: Supported Devices</a>
 <ul>
 <li><em>List of x86 Chromebook hardware that can be reflashed with Coreboot to support any UEFI-compliant OS.</em></li>
+</ul>
+</li>
+<li><a href="https://chrultrabook.github.io/docs/">Chrultrabook Docs</a>
+<ul>
+<li><em>Detailed guide for converting x86 Chromebooks to run any UEFI-compliant OS.</em></li>
 </ul>
 </li>
 <li><a href="https://www.mattmillman.com/info/crimpconnectors">Crimp/Jumper Connector Names</a>
@@ -273,7 +278,7 @@
 </li>
 </ul>
 <p>A mix of my startpage links and random bookmarks you might find useful.<br/>
-Updated 🌗 Tue, Nov 21st, 2023</p>
+Updated 🌑 Mon, Nov 27th, 2023</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
