--- a/notes/index.htm
+++ b/notes/index.htm
@@ -39,6 +39,7 @@
 <p>Writings and notes on random topics, sorted by date of first posting.</p>
 <div class="index">
 <ul>
+<li><a href="termux-ssh-fingerprint.htm">Termux: SSH fingerprint authentication using Android Keystore</a> — <em>December 2023</em></li>
 <li><a href="suruga-ya-intl.htm">Thoughts on the disrespectful Suruga-ya.com (not suruga-ya.jp)</a> — <em>August 2023</em></li>
 <li><a href="useful-links.htm">Fun and Useful Links to Elsewhere</a> — <em>August 2022 <span style="font-size: 85%;">(updated November 2023)</span></em></li>
 <li><a href="figures.htm">My Collection of Assorted Figurines (oops all miku!)</a> — <em>April 2022 <span style="font-size: 85%;">(updated November 2023)</span></em></li>
