Happy New 2024!, added to chromebook article

--- a/notes/chromebooks.htm
+++ b/notes/chromebooks.htm
@@ -195,8 +195,10 @@ I actually came to like this placement so much that now I set <code>Caps Lock</c
 <p>On pre-EC Chromebooks, the top row of media keys send F1-F10 internally, newer ones send media key scancodes, and need to be remapped.
 As I was grappling with this fact, I found you can change virtual consoles without access to the function row using <code>chvt 2</code> to switch to <code>tty2</code>.</p>
 <h3>Nav Cluster keys<span id="Nav-Cluster-keys"></span></h3>
-<p>I found it the most convenient to create a keyboard modifier layer using <code>Right Alt + arrow keys</code> to produce <code>PgUp/PgDn/Home/End</code>.</p>
-<p>Some people prefer <code>Left Ctrl</code> or even <code>Super</code>, you can experiment with whatever won’t conflict with your window manager or give you carpal tunnel.</p>
+<p>I found it the most convenient to create a keyboard modifier layer using <code>Right Alt + arrow keys</code> to produce <code>PgUp/PgDn/Home/End</code>.
+You press <code>Right Alt</code> with your right index finger, and press the arrow keys with the right ring finger.</p>
+<p>I don’t even think about it at all, so it’s quite intuitive once you get used to it.
+Some people prefer <code>Left Ctrl</code> or even <code>Super</code>, you can experiment with whatever won’t conflict with your window manager or give you carpal tunnel.</p>
 <h3>Delete/F11<span id="DeleteF11"></span></h3>
 <p>By default, the power key on the top-right will power off the device, set <code>HandlePowerKey=ignore</code> in <code>/etc/systemd/logind.conf</code> on <code>systemd</code> based distros to disable this.</p>
 <p>Even though it takes the place of <code>F11</code>, I just use <code>Delete</code> more.
@@ -215,7 +217,7 @@ If you really need <code>F11</code> more, you can set <code>Right Alt + Backspac
 		</a>
 	</span>
 	<p>written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
-	— &#169; 2015-2023 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
+	— &#169; 2015-2024 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
 	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.5 — static microblog processor</a></p>
 </div>
 </div> <!-- end of content -->
