Added to chromebook article, found a fan!

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -100,11 +100,16 @@
 <a href="https://order.mandarake.co.jp/order/?lang=en">mandarake</a></p>
 </details>
 <img class="right" style="width: 150px;" src="https://upload.wikimedia.org/wikipedia/commons/d/d1/WWW-LetShare.svg" />
-<p><strong>/g/ friends</strong> —</p>
+<p><strong>we share a bond, no matter how slight</strong> —</p>
 <ul>
-<li><img src="/static/button/affiliates/poopingpenis.gif" alt="ico" /> <a href="https://poopingpenis.netlify.app/">poopingpenis’s igloo</a>
+<li><img src="/static/button/affiliates/poopingpenis.gif" alt="ico" /> <a href="https://poopingpenis.netlify.app/"><del>poopingpenis’s igloo</del> 404</a>
 <ul>
 <li><em>PC-98 computing enthusiast from Puerto Rico, (escrito en español).</em></li>
+</ul>
+</li>
+<li><img src="/static/button/affiliates/xjunko.png" alt="ico" /> <a href="https://konno.ovh">xjunko’s site</a>
+<ul>
+<li><em>inspired by my site 💕, a rhythm games enthusiast from Malaysia.</em></li>
 </ul>
 </li>
 </ul>
@@ -289,7 +294,7 @@ Updated 🌑 Mon, Nov 27th, 2023</p>
 		</a>
 	</span>
 	<p>written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
-	— &#169; 2015-2024 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
+	— &#169; 2015-2023 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
 	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.5 — static microblog processor</a></p>
 </div>
 </div> <!-- end of content -->
