--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -112,6 +112,11 @@
 <li><em>inspired by my site 💕, a rhythm games enthusiast from Malaysia.</em></li>
 </ul>
 </li>
+<li><a href="https://hiddenwonders.xyz">Hidden Wonders</a>
+<ul>
+<li><em>Warm reminder of myself from years back, it takes guts to put yourself out there when you don’t like revealing any bit of yourself online. I hope you find peace ❤️ー</em></li>
+</ul>
+</li>
 </ul>
 <p><strong>docs</strong> —</p>
 <ul>
@@ -294,7 +299,7 @@ Updated 🌑 Mon, Nov 27th, 2023</p>
 		</a>
 	</span>
 	<p>written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
-	— &#169; 2015-2023 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
+	— &#169; 2015-2024 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
 	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.5 — static microblog processor</a></p>
 </div>
 </div> <!-- end of content -->
