Found poopingpenis's BBS

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -105,6 +105,7 @@
 <li><img src="/static/button/affiliates/poopingpenis.gif" alt="ico" /> <a href="https://poopingpenis.netlify.app/"><del>poopingpenis’s igloo</del> 404</a>
 <ul>
 <li><em>PC-98 computing enthusiast from Puerto Rico, (escrito en español).</em></li>
+<li><em>His BBS is <a href="https://poopingpenis.bbs.fc2.com">still up</a>.</em></li>
 </ul>
 </li>
 <li><img src="/static/button/affiliates/xjunko.png" alt="ico" /> <a href="https://konno.ovh">xjunko’s site</a>
