--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -36,7 +36,7 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/8/3 -->
-<!-- updated 2023/11/27 -->
+<!-- updated 2024/1/1 -->
 <h1>Fun and Useful Links to Elsewhere<span id="Fun-and-Useful-Links-to-Elsewhere"></span></h1>
 <details>
 <summary><span style="font-size: 130%;">Startpage Links</span></summary>
@@ -289,7 +289,7 @@
 </li>
 </ul>
 <p>A mix of my startpage links and random bookmarks you might find useful.<br/>
-Updated 🌑 Mon, Nov 27th, 2023</p>
+Updated 🌒 Mon, Jan 1st, 2024</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
