--- a/index.htm
+++ b/index.htm
@@ -39,11 +39,8 @@
 <noscript>
 	<p><em>You have JavaScript disabled, dynamic content and multimedia will not work.</em></p>
 </noscript>
-<!-- banner for christmas and new years 2024 -->
-<h2>Merry <strike>late night fufu micker hours</strike> Christmas and a Happy New 2024!</h2>
-<p><img src="https://raw.githubusercontent.com/microsounds/microsounds/master/banners/micker_xmas_2023.jpg" style="opacity: 85%;" alt="heading" /></p>
-<!-- ![heading](/static/starry.jpg) -->
-<!-- <span class="aside"><sup>_Original illustration [&copy; 2015 tanakatam][illust]_</sup></span> -->
+<p><img src="/static/starry.jpg" alt="heading" />
+<span class="aside"><sup><em>Original illustration <a href="https://gelbooru.com/index.php?page=post&amp;s=view&amp;id=3757995">© 2015 tanakatam</a></em></sup></span></p>
 <h2>About me<span id="About-me"></span></h2>
 <p>This is my little sanctuary where I bottle up the unix computer zealot in me, you can call me <code>microsounds</code> if you want.</p>
 <p>I like <del>muted pastels,</del> starry night skies, people watching and the <a href="http://emulator.pdp-11.org.ru/misc/1978.07_-_Bell_System_Technical_Journal.pdf" title="Bell System Technical Journal Vol. 57, No. 6, Part 2, pp. 1905- (July-Aug. 1978), Dennis Ritchie, Ken Thompson">unix</a> <a href="http://files.catwell.info/misc/mirror/the-unix-programming-environment-kernighan-pike.pdf" title="The Unix Programming Environment (1984), Brian Kernighan, Rob Pike">programming</a> <a href="http://www.catb.org/~esr/writings/taoup/html/" title="The Art of Unix Programming (2003), Eric S. Raymond">environment</a>.
