--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -36,7 +36,7 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/8/3 -->
-<!-- updated 2024/1/1 -->
+<!-- updated 2024/1/12 -->
 <h1>Fun and Useful Links to Elsewhere<span id="Fun-and-Useful-Links-to-Elsewhere"></span></h1>
 <details>
 <summary><span style="font-size: 130%;">Startpage Links</span></summary>
@@ -194,6 +194,11 @@
 <li><em>A list of legally dubious and incomprensible “FOSS” software licenses found in the wild.</em></li>
 </ul>
 </li>
+<li><a href="https://fmhy.net">FMHY: freemediaheckyeah</a>
+<ul>
+<li><em>Enormous rabbit hole of curated resources for streaming/downloading pirated TV, movies, music, books, anime, manga, sports, broadcast TV, radio, etc.</em></li>
+</ul>
+</li>
 </ul>
 <p><strong>misc</strong> —</p>
 <ul>
@@ -210,6 +215,11 @@
 <li><a href="https://www.sudomemo.net">sudomemo</a>
 <ul>
 <li><em>A revival of <a href="https://en.wikipedia.org/wiki/Flipnote_Studio">Flipnote Hatena</a>, a 2010s online hosting service for Nintendo DSi/3DS Flipnote Studio animations.</em></li>
+</ul>
+</li>
+<li><a href="https://ynoproject.net">Yume Nikki Online Project</a>
+<ul>
+<li><em>Play the classic atmospheric horror walking sim <strong>Yume Nikki</strong> and its many fangames, with friends, in your browser.</em></li>
 </ul>
 </li>
 <li><a href="https://poyopoyo.gifanimaker.com">poyopoyo gif maker</a></li>
@@ -289,7 +299,7 @@
 </li>
 </ul>
 <p>A mix of my startpage links and random bookmarks you might find useful.<br/>
-Updated 🌒 Mon, Jan 1st, 2024</p>
+Updated 🌕 Fri, Jan 12th, 2024</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
