--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -219,7 +219,7 @@
 </li>
 <li><a href="https://ynoproject.net">Yume Nikki Online Project</a>
 <ul>
-<li><em>Play the classic atmospheric horror walking sim <strong>Yume Nikki</strong> and its many fangames, with friends, in your browser.</em></li>
+<li><em>Play the classic surreal atmospheric walking sim <strong>Yume Nikki</strong> and its many fangames, with friends, in your browser.</em></li>
 </ul>
 </li>
 <li><a href="https://poyopoyo.gifanimaker.com">poyopoyo gif maker</a></li>
