--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -36,7 +36,7 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/8/3 -->
-<!-- updated 2024/1/12 -->
+<!-- updated 2024/1/15 -->
 <h1>Fun and Useful Links to Elsewhere<span id="Fun-and-Useful-Links-to-Elsewhere"></span></h1>
 <details>
 <summary><span style="font-size: 130%;">Startpage Links</span></summary>
@@ -85,19 +85,13 @@
 <a href="https://nyaa.si">nyaa</a> ·
 <a href="https://fitgirl-repacks.site">fitgirl</a> ·
 <a href="https://cdromance.com">CDromance</a> ·
-<del><a href="https://u1lib.org">zLibrary (rip)</a></del></p>
+<a href="https://singlelogin.re">zLibrary</a></p>
 <p><strong>file hosts</strong> —
 <a href="https://catbox.moe">catbox</a> <sup><em><a href="https://litterbox.catbox.moe">litterbox</a></em></sup> ·
 <a href="https://0x0.st">0x0.st</a></p>
 <p><strong>benchmarks</strong> —
 <a href="https://cpubenchmark.net/singleCompare.php">CPU Mark</a> ·
 <a href="https://videocardbenchmark.net/singleCompare.php">G3D Mark</a></p>
-<p><strong>stores</strong> —
-<a href="https://aliexpress.com">aliexpress</a> ·
-<a href="https://walmart.com">walmart</a> ·
-<a href="https://ebay.com">ebay</a> ·
-<a href="https://amazon.com">amazon</a> <sup><em><a href="https://amazon.jp">jp</a></em></sup> ·
-<a href="https://order.mandarake.co.jp/order/?lang=en">mandarake</a></p>
 </details>
 <img class="right" style="width: 150px;" src="https://upload.wikimedia.org/wikipedia/commons/d/d1/WWW-LetShare.svg" />
 <p><strong>we share a bond, no matter how slight</strong> —</p>
@@ -299,7 +293,7 @@
 </li>
 </ul>
 <p>A mix of my startpage links and random bookmarks you might find useful.<br/>
-Updated 🌕 Fri, Jan 12th, 2024</p>
+Updated 🌖 Mon, Jan 15th, 2024</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
