--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="https://github.com/microsounds">my github</a></li>
 			<li><a href="/notes/dotfiles.htm">my dotfiles</a></li>
-			<li><a href="/notes/index.htm">my notes</a></li>
+			<li><a href="/notes/">my notes</a></li>
 			<li><a href="/notes/useful-links.htm">useful links</a></li>
 			<li><a href="/rss.xml">rss <img alt="rss" class="icon" src="/static/button/rss.svg" /></a></li>
 		</ul>
@@ -78,7 +78,7 @@ Anyone can create their own personal sandbox on the web and put as much or as li
 	opacity: 40%;" />
 </div>
 <h2>Things I’ve made recently<span id="Things-Ive-made-recently"></span></h2>
-<p>I have a collection of notes and writings located at <a href="notes/index.htm"><code>/notes</code></a> if you’re interested.</p>
+<p>I have a collection of notes and writings located at <a href="/notes/"><code>/notes</code></a> if you’re interested.</p>
 <ul>
 <li><em>(2019–present)</em> my “graphical shell” computing environment — <a href="/notes/dotfiles.htm"><code>microsounds/atelier</code></a>
 <ul>
