trying to game google search console brb

--- a/notes/index.htm
+++ b/notes/index.htm
@@ -39,6 +39,7 @@
 <p>Writings and notes on random topics, sorted by date of first posting.</p>
 <div class="index">
 <ul>
+<li><a href="on-chromebooks.htm">Friendship ended with Thinkpad, now Chromebook (w/ Coreboot) is my best friend</a> — <em>January 2024</em></li>
 <li><a href="chromebooks.htm">Friendship ended with Thinkpad, now Chromebook (w/ Coreboot) is my best friend</a> — <em>January 2024</em></li>
 <li><a href="termux-ssh-fingerprint.htm">Termux: SSH fingerprint authentication using Android Keystore</a> — <em>December 2023</em></li>
 <li><a href="suruga-ya-intl.htm">Thoughts on the disrespectful Suruga-ya.com (not suruga-ya.jp)</a> — <em>August 2023</em></li>
