notes/useful-notes: Added keyboard simulator

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -36,7 +36,7 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/8/3 -->
-<!-- updated 2024/1/15 -->
+<!-- updated 2024/2/4 -->
 <h1>Fun and Useful Links to Elsewhere<span id="Fun-and-Useful-Links-to-Elsewhere"></span></h1>
 <details>
 <summary><span style="font-size: 130%;">Startpage Links</span></summary>
@@ -206,6 +206,11 @@
 <li><em>Automatically curated list of new/used disk storage prices on Amazon.com for various countries.</em></li>
 </ul>
 </li>
+<li><a href="https://keyboardsimulator.xyz">Keyboard Simulator</a>
+<ul>
+<li><em>3D custom mechanical keyboard simulator, lets you experiment with color schemes and combining keycap sets.</em></li>
+</ul>
+</li>
 <li><a href="https://www.sudomemo.net">sudomemo</a>
 <ul>
 <li><em>A revival of <a href="https://en.wikipedia.org/wiki/Flipnote_Studio">Flipnote Hatena</a>, a 2010s online hosting service for Nintendo DSi/3DS Flipnote Studio animations.</em></li>
@@ -293,7 +298,7 @@
 </li>
 </ul>
 <p>A mix of my startpage links and random bookmarks you might find useful.<br/>
-Updated 🌖 Mon, Jan 15th, 2024</p>
+Updated 🌔 Sun, Feb 4th, 2024</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
