--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- created 2020/10/22 -->
-<!-- updated 2023/10/2 -->
+<!-- updated 2024/2/19 -->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)<span id="List-of-low-profile-GPUs-for-small-form-factor-PCs-SFFs"></span></h1>
-<p>Last updated 🌑 Mon, Oct 2nd, 2023.</p>
+<p>Last updated 🌘 Mon, Feb 19th, 2024.</p>
 <p><img src="assets/low_profile_gpu.jpg" alt="img" /></p>
 <p>Most GPU marketing materials will use the term <strong>LP</strong> or <strong>“low profile”</strong> to refer to graphics cards that are half the height of a normal GPU, not full-height short-length GPUs meant for Mini-ITX cases.
 As far as discrete graphics go, these are the most space and energy-efficient GPUs that money can buy, ideal for use in space-saving PCs, small form factor PCs (SFFs), home theater PCs (HTPCs), slimline cases, specialty server hardware, and other niche form-factors where size and/or power is a constraining factor.
@@ -375,7 +375,14 @@ If you’re not looking to drive 4x DisplayPort monitors with a single card, and
 <td style="text-align: center">2022</td>
 <td style="text-align: center">75W</td>
 <td style="text-align: center">4927</td>
-<td style="text-align: left"></td>
+<td style="text-align: left">A “display adaptor” “””“successor””””” to GT 1030.</td>
+</tr>
+<tr>
+<td style="text-align: left">Intel Arc A380</td>
+<td style="text-align: center">2022</td>
+<td style="text-align: center">75W</td>
+<td style="text-align: center">5091</td>
+<td style="text-align: left"><strong>Requires CPU with Resizeable BAR</strong>, available on AMD Ryzen 3xxx or Intel Core 10th gen or higher.</td>
 </tr>
 <tr>
 <td style="text-align: left">Nvidia GeForce GTX 950</td>
@@ -397,6 +404,13 @@ If you’re not looking to drive 4x DisplayPort monitors with a single card, and
 <td style="text-align: center">75W</td>
 <td style="text-align: center">7818</td>
 <td style="text-align: left">ASL made a <a href="https://videocardz.net/asl-geforce-gtx-1650-4gb-war-knife">1-slot version</a> for the Chinese market.</td>
+</tr>
+<tr>
+<td style="text-align: left">Nvidia GeForce RTX 3050 6GB</td>
+<td style="text-align: center">2024</td>
+<td style="text-align: center">75W</td>
+<td style="text-align: center">10557</td>
+<td style="text-align: left">Successor to GTX 1650 LP.</td>
 </tr>
 <tr>
 <td style="text-align: left">Nvidia RTX A2000</td>
