notes/gpus: 115W in an SFF is pretty wild

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -54,6 +54,7 @@ Low profile PCIe cards with power requirements below 75W can be powered from the
 </li>
 <li><a href="#1-slot-Low-Profile-under-75W">1-slot Low Profile under 75W</a></li>
 <li><a href="#2-slot-Low-Profile-under-75W">2-slot Low Profile under 75W</a></li>
+<li><a href="#2-slot-Low-Profile-exceeding-75W">2-slot Low Profile exceeding 75W</a></li>
 </ul>
 </div>
 <p><em><strong>This is a reference list of common, rare and/or discontinued low profile 75W PCIe GPUs up to 2 slots wide introduced since 2013.</strong></em>
@@ -382,7 +383,7 @@ If you’re not looking to drive 4x DisplayPort monitors with a single card, and
 <td style="text-align: center">2022</td>
 <td style="text-align: center">75W</td>
 <td style="text-align: center">5091</td>
-<td style="text-align: left"><strong>Requires CPU with Resizeable BAR</strong>, available on AMD Ryzen 3xxx or Intel Core 10th gen or higher.</td>
+<td style="text-align: left"><strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizeable BAR</a></strong>, available on AMD Ryzen 3xxx or Intel Core 10th gen or higher.</td>
 </tr>
 <tr>
 <td style="text-align: left">Nvidia GeForce GTX 950</td>
@@ -417,14 +418,35 @@ If you’re not looking to drive 4x DisplayPort monitors with a single card, and
 <td style="text-align: center">2021</td>
 <td style="text-align: center">75W</td>
 <td style="text-align: center">13825</td>
-<td style="text-align: left">Workstation card.</td>
+<td style="text-align: left">Workstation card, 12GB VRAM, most efficient LP card available.</td>
 </tr>
+</tbody>
+</table>
+<h1>2-slot Low Profile exceeding 75W<span id="2-slot-Low-Profile-exceeding-75W"></span></h1>
+<blockquote>
+<p><strong>NOTE</strong><br/>
+<em>Consider other form factors if you need this much graphical power, if you don’t strictly need an SFF it can be much more economical to opt for cases that fit full-height cards.</em></p>
+</blockquote>
+<p>These are dual slot low profile and will run very hot on account of requiring external power via PCIe 8-pin connectors.</p>
+<p>If your SFF’s PSU does not feature PCIe 8-pin connectors, you can draw power from unused SATA power connectors using <em><strong>SATA to PCIe 8-pin power adaptors</strong></em>, but you are also likely to exceed the power limits of your prebuilt’s power supply.</p>
+<p>Even if your PSU has enough overhead, a 115W card will draw 75W from the PCIe slot and 40W more from PCIe 8-pin—you risk damaging your system if drawing that power from SATA power adaptors as the SATA spec only guarantees 54W and you are most likely already drawing 3W for every connected SATA SSD.</p>
+<table>
+<thead>
+<tr>
+<th style="text-align: left">Name</th>
+<th style="text-align: center">Released</th>
+<th style="text-align: center">TDP</th>
+<th style="text-align: center">PassMark G3D Score</th>
+<th style="text-align: left">Remarks</th>
+</tr>
+</thead>
+<tbody>
 <tr>
 <td style="text-align: left">Nvidia GeForce RTX 4060</td>
 <td style="text-align: center">2023</td>
-<td style="text-align: center">75W</td>
+<td style="text-align: center">115W</td>
 <td style="text-align: center">19444</td>
-<td style="text-align: left">Listed at 115W, available in 75W low profile.</td>
+<td style="text-align: left">8GB VRAM, <strong>Requires PCIe 8-pin power.</strong></td>
 </tr>
 </tbody>
 </table>
