Added passsmark gpu benchmarks

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -36,7 +36,7 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/8/3 -->
-<!-- updated 2024/2/4 -->
+<!-- updated 2024/2/20 -->
 <h1>Fun and Useful Links to Elsewhere<span id="Fun-and-Useful-Links-to-Elsewhere"></span></h1>
 <details>
 <summary><span style="font-size: 130%;">Startpage Links</span></summary>
@@ -229,7 +229,12 @@
 </li>
 <li><a href="https://www.cpubenchmark.net/singleCompare.php">PassMark CPU Benchmarks</a>
 <ul>
-<li><em>Compare CPU single and multi-threaded performance for CPUs released since 1999.</em></li>
+<li><em>Compare relative single and multi-threaded performance for CPUs released since 1999.</em></li>
+</ul>
+</li>
+<li><a href="https://www.videocardbenchmark.net/singleCompare.php">PassMark GPU Benchmarks</a>
+<ul>
+<li><em>Compare relative 2D and 3D graphical performance for GPUs released since 1999.</em></li>
 </ul>
 </li>
 <li><a href="https://st.ayaka.one/">Project Sekai Stickers</a>
@@ -298,7 +303,7 @@
 </li>
 </ul>
 <p>A mix of my startpage links and random bookmarks you might find useful.<br/>
-Updated 🌔 Sun, Feb 4th, 2024</p>
+Updated 🌘 Tue, Feb 20th, 2024</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
