--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2024/1/6 -->
+<!-- updated 2024/2/29 -->
 <h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
-<p>Last updated 🌔 Sat, Jan 6th, 2024</p>
+<p>Last updated 🌒 Thu, Feb 29th, 2024</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
 Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=0Nh-k8OXhCo">“skill” claw machine</a>, these are more modest and less ambitious in detail, character pose, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more far more expensive figures in one or more of these categories.</p>
 <p>I live an ocean away from the easternmost archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild.
@@ -149,10 +149,8 @@ var figs = [
 	 * MFC ids prepended with x are knockoffs
 	 */
 
-	[ '287708', 'e0015', 'good smile gochiusa kafu chino nendo #558 (2017)' ],
-	[ 'p1876376', '23b1e', 'good smile cinnamoroll miku nendo #2306 (2024)' ],
-	[ '861021', '93e28', 'sega preciality special nuigurumi (fuwafuwa mega (jumbo2019)' ],
-	[ 'p1781933', 'ecbab', 'design coco miku senbonzakura 10th anniv. ver 1/7 (scal2025)' ],
+	[ '861021', '93e28', 'sega preciality special nuigurumi (fuwafuwa mega jumbo) miku plush (2019)' ],
+	[ 'p1781933', 'ecbab', 'design coco miku senbonzakura 10th anniv. ver 1/7 scale (2025)' ],
 	[ 'p1974911', '8f1ef', 'furyu bicute bunnies miku rurudo ver. (2024)' ],
 	[ 'p2004539', 'ade3e', 'taito miku x rody artist masterpiece+ 39 ver. (2024)' ],
 	[ 'p236103', '20356', 'freeing b-style hatsune miku V3 1/4 scale (2016)' ],
@@ -167,19 +165,19 @@ var figs = [
 	[ '331720', '1ff7c', 'good smile project diva ha2ne miku nendoroid co-de (2016)' ],
 	[ '22229', 'e58da', 'sega hatsune miku PM figure (2010)' ],
 	[ '266283', 'f0162', 'taito hatsune miku mamama style api miku (2015)' ],
-	[ '12037', 'bbc47', 'max factory miku live stage ver. (wonfes 2009) figma (#2009)' ],
-	[ '153162', '8abda', 'good smile snow miku 2014 rabbit yukine nendoroid (#3802014)' ],
-	[ '5737', '2e05d', 'good smile kagami hiiragi \'MikkuMiku\' lucky star OVA (n2009)' ],
+	[ '12037', 'bbc47', 'max factory miku live stage ver. (wonfes 2009) figma #EX-003 (2009)' ],
+	[ '153162', '8abda', 'good smile snow miku 2014 rabbit yukine nendoroid #380 (2014)' ],
+	[ '5737', '2e05d', 'good smile kagami hiiragi \'MikkuMiku\' lucky star OVA nendoroid #062 (2009)' ],
 	[ '59755', '4a5b2', 'max factory hatsune miku append figma #100 (2011)' ],
 	[ '78582', '5dc32', 'good smile hatsune miku append nendoroid #194 (2012)' ],
 	[ '757554', '0b003', 'good smile miku cheerful ver. nendoroid #1001 (2011)' ],
 	[ '287701', 'ad644', 'good smile mitchie m the greatest idol miku 1/8 scale (2016)' ],
 	[ '41459', '30b7f', 'good smile miku absolute HMO edition nendoroid #129 (2011)' ],
-	[ '861021', '93e28', 'sega preciality special nuigurumi (fuwafuwa mega (jumbo2019)' ],
-	[ 'p1849001', '85dfd', 'gift hatsune miku nt fumo plush (2023)' ],
-	[ 'p1876348', 'f08ca', 'good smile miku 16th birthday ~dear creators~ (nendoroi2023)' ],
+	[ '861021', '93e28', 'sega preciality special nuigurumi (fuwafuwa mega jumbo) miku plush (2019)' ],
+	[ '1849001', '85dfd', 'gift hatsune miku nt fumo plush (2023)' ],
+	[ 'p1876348', 'f08ca', 'good smile miku 16th birthday ~dear creators~ nendoroid #2222 (2023)' ],
 	[ '1189085', '8fa69', 'good smile hatsune miku nt 1/8 scale (2023)' ],
-	[ '1258843', '55d3c', 'furyu f:nex hatsune miku chronicle 1/7 scale (2022)' ],
+	[ '1258843', '55d3c', 'furyu f-nex hatsune miku chronicle 1/7 scale (2022)' ],
 	[ '926772', '68615', 'good smile racing miku 2020 nendoroid #1293 (2020)' ],
 	[ '1711391', '32d0d', 'taito kuji miku 39 no hi kinen kuji B prize (2023)' ],
 	[ '998275', 'e47b6', 'taito miku 3rd season autumn ver. (2020)' ],
@@ -214,13 +212,13 @@ var figs = [
 	[ '1696654', '98c36', 'furyu miku flower fairy noodle stopper (2023)' ],
 	[ 'p945860', '6ae97', 'good smile miku nendoroid doll (2020)' ],
 	[ '1226915', '1067b', 'good smile miku date outfit ver. nendoroid doll (2023)' ],
-	[ '1616455', '1154b', 'good smile pop up parade ver. L DECO*27 vampire jirai (2023)' ],
+	[ '1616455', '1154b', 'good smile pop up parade ver. L DECO*27 vampire jirai miku (2023)' ],
 	[ '1779734', 'fb6e1', 'taito miku fashion figure subculture ver. (2023)' ],
 	[ '1335582', '0d57a', 'sega sakura miku v3 SPM (2022)' ],
 	[ '1571286', '15051', 'sega miku christmas 2022 SPM (2022)' ],
 	[ '1479579', '350f9', 'sega miku 15th anniversary kei ver. SPM (2022)' ],
 	[ '1549222', '43de2', 'sega miku 15th anniversary zhou ver. SPM (2022)' ],
-	[ '1376115', '30a86', 'good smile racing AMG 2021 SUPER GT round 3 1/64 (scale2022)' ],
+	[ '1376115', '30a86', 'good smile racing AMG 2021 SUPER GT round 3 1/64 scale diecast car (2022)' ],
 	[ '1275355', '94c12', 'sega preciality special nuigurumi sakura miku (2022)' ],
 	[ '1213389', '85cfa', 'good smile genshin impact venti nendoroid #1795 (2022)' ],
 	[ '1189088', 'f9b14', 'good smile hatsune miku nt nendoroid #1701 (2022)' ],
@@ -229,17 +227,17 @@ var figs = [
 	[ '1220581', 'b0f34', 'taito miku artist masterpiece pricess arabian ver. (2021)' ],
 	[ 'x1214387', 'ea438', 'knockoff taito miku wonderland rapunzel (2021)' ],
 	[ 'x314683', 'e7d29', 'knockoff sega miku fuwa fuwa nuigurumi plush (strap) (2015)' ],
-	[ 'x370088', '27dfa', 'knockoff sega miku fuwa fuwa mega jumbo nuigurumi (plus2016)' ],
+	[ 'x370088', '27dfa', 'knockoff sega miku fuwa fuwa mega jumbo nuigurumi plush (2016)' ],
 	[ 'x514129', '00fa6', 'knockoff sega nyanko miku fuwafuwa nuigurumi plush (2017)' ],
 	[ 'x809190', '8d2a0', 'knockoff furyu miku noodle stopper figure (2019)' ],
-	[ '1536233', '7215f', 're-ment miku miku room miniature diorama trading fig (82022)' ],
+	[ '1536233', '7215f', 're-ment miku miku room miniature diorama trading fig 8/8 set (2022)' ],
 	[ 'x2987', '9fa5f', 'knockoff max factory figma miku #014 (2008)' ],
 	[ '401018', 'bfb66', 'sega project diva innocent SPM miku (2016)' ],
 	[ '718192', '29017', 'hatsune miku 2nd season Winter ver. (2018)' ],
 	[ '1251026', 'e36e0', 'bandai q posket miku type a (2021)' ],
 	[ '944728', 'c98b0', 'furyu miku bicute bunnies original ver. (2020)' ],
 	[ '1311067', '82a91', 'taito miku artist masterpiece princess alice (2022)' ],
-	[ '1141381', 'fe94b', 'taito miku artist masterpiece birthday 2021 (14th (anni2021)' ],
+	[ '1141381', 'fe94b', 'taito miku artist masterpiece birthday 2021 (14th anniv.) (2021)' ],
 	[ '1293291', 'c95e9', 'furyu sakura miku noodle stopper (2022)' ],
 	[ '886807', '5b4b2', 'taito sakura miku 2020 ver. (2020)' ],
 	[ '1216990', '90105', 'bandai espresto racing miku 2020 (2021)' ],
@@ -262,14 +260,14 @@ var figs = [
 	[ 'x287774', 'f7c92', 'knockoff good smile umaru-chan nendoroid #524 (2015)' ],
 	[ 'x26113', 'a69e3', 'knockoff good smile snow miku nendoroid #150 (2010)' ],
 	[ '198604', '64215', 'sega project diva 2nd miku PM figure (2014)' ],
-	[ '47413', 'd5289', 'banpresto akira kogami ichiban kuji H prize (kyun-chara2010)' ],
+	[ '47413', 'd5289', 'banpresto akira kogami ichiban kuji H prize kyun-chara (2010)' ],
 	[ '167123', '00cd8', 'sega project diva arcade miku PM figure (2012)' ],
 	[ '100292', '0bb7d', 'great eastern entertainment hatsune miku plush (2012)' ],
 	[ 'w66010', '03aa7', 'good smile miku support ver. nendoroid #170 (2011)' ],
 	[ 'w370088', '27dfa', 'sega fuwafuwa mega jumbo miku plush (2016)' ],
 	[ 'w451821', '07e74', 'good smile hatsune miku nendoroid JUMBO (2016)' ],
 	[ 'w945858', 'b91b5', 'good smile hatsune miku v4x nendoroid #1309 (2020)' ],
-	[ 'w1085480', 'f2b12', 'furyu f:nex miku nekomimi headphone ver. 1/7 scale (2022)' ],
+	[ 'w1085480', 'f2b12', 'furyu f-nex miku nekomimi headphone ver. 1/7 scale (2022)' ],
 	[ 'w198011', '69a8c', 'max factory project diva 2nd mikuzukin miku 1/7 scale (2015)' ],
 	[ 'w236245', '829af', 'good smile tell your world miku 1/8 scale (2015)' ],
 	[ 'w78591', '17fbf', 'max factory miku HSP ver. 1/7 scale (2012)' ],
