notes/figures: added figs to watchlist, mostly just to gawk

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2024/2/29 -->
+<!-- updated 2024/3/6 -->
 <h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
-<p>Last updated 🌒 Thu, Feb 29th, 2024</p>
+<p>Last updated 🌔 Wed, Mar 6th, 2024</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
 Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=0Nh-k8OXhCo">“skill” claw machine</a>, these are more modest and less ambitious in detail, character pose, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more far more expensive figures in one or more of these categories.</p>
 <p>I live an ocean away from the easternmost archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild.
@@ -273,7 +273,10 @@ var figs = [
 	[ 'w78591', '17fbf', 'max factory miku HSP ver. 1/7 scale (2012)' ],
 	[ 'w1917313', '63f61', 'sega miku x cinnamoroll premium noodle stopper (2024)' ],
 	[ 'w1954286', 'cb979', 'sega luminasta miku x cinnamoroll (2024)' ],
-
+	[ 'w1956669', '12734', 'good smile miku v3 nendoroid #2360 (2024)' ],
+	[ 'w1460097', '41456', 'spiritale miku my queen!! 1/7 scale (2024)' ],
+	[ 'w1623825', '9f105', 'spiritale miku birthday 2022 polaris ver. 1/7 scale (2024)' ],
+	[ 'w1974621', '553b9', 'taito miku fashion figure lolita (lmao) (2024)' ],
 ];
 
 var thumbs = document.getElementById('fig-thumbs');
