notes/chromebooks: Added aside about minecraft

--- a/notes/why-chromebooks.htm
+++ b/notes/why-chromebooks.htm
@@ -111,8 +111,8 @@ during it’s first Windows Update?</p>
 <p>Of course, they ran like hot garbage when used with the preloaded OS, but they could be <span class="blink">made to fly</span> if your choice of OS and desktop environment were <a href="/notes/dotfiles.htm" title="like mine">minimal enough</a>.
 Their performance has <a href="https://www.cpubenchmark.net/compare/2762vs2907vs3239vs3683vs5157">only improved with time</a>,
 I assert that a sub-$120 Gemini Lake Chromebook released in 2019 is good enough to run any
-<a href="https://www.youtube.com/watch?v=cTuSXC4ZAxo" title="genshin lol">non-gaming related task</a> you could be doing outside on a laptop.
-If you feel like spending more, you get more contemporary features like convertible 360° swiveling, touchscreens, fingerprint sensors and pen tablet displays.</p>
+<a href="https://www.youtube.com/watch?v=cTuSXC4ZAxo" title="genshin lol">non-gaming related task</a> you could be doing outside on a laptop.<sup class="footnote-ref"><a href="#fn-gaming" id="fnref-gaming" data-footnote-ref="data-footnote-ref">1</a></sup></p>
+<p>If you feel like spending more, you get more contemporary features like convertible 360° swiveling, touchscreens, fingerprint sensors and pen tablet displays.</p>
 <p>The inherent value provided by cheaply produced trash now far exceeds that of it’s physical longevity or build quality.</p>
 <p>There are now industries dedicated to selling refurbished Chromebooks used in education because schools churn through so many,
 Google’s <a href="https://support.google.com/chrome/a/answer/6220366">update sunset policy</a>
@@ -207,6 +207,16 @@ If you really need <code>F11</code> more, you can set <code>Right Alt + Backspac
 <h3>F12 and beyond<span id="F12-and-beyond"></span></h3>
 <p>I actually don’t use <code>F12</code> for anything, so I didn’t bother, you can set this to whatever you want.
 <code>Right Alt + number row</code> could be used to reach up to <code>F21</code> if that’s what you really wanted to.</p>
+<section class="footnotes" data-footnotes="data-footnotes">
+<ol>
+<li id="fn-gaming">
+<p>While I don’t suggest getting a Chromebook for gaming, it’s not the worst idea.</p>
+<p>If you’re willing to cut your battery life from from 10 hours to 3, you can get <em><strong>Minecraft Java Edition</strong></em> to run at a stable 60fps on a Gemini Lake Chromebook using the rendering optimization mods <a href="https://modrinth.com/mod/sodium">Sodium</a>, <a href="https://modrinth.com/mod/lithium">Lithium</a> and optionally <a href="https://modrinth.com/mod/ferrite-core">FerriteCore</a>.
+If you’re still worried about battery life while gaming, you can just lock the framerate to 30fps and get 6 hours on a full charge.</p>
+<p>I would record footage demonstrating this, but I can’t maintain this framerate while also capturing the X display. <a href="#fnref-gaming" class="footnote-backref" data-footnote-backref="data-footnote-backref" data-footnote-backref-idx="1" aria-label="Back to reference 1">↩</a></p>
+</li>
+</ol>
+</section>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
