notes: added preorder, useful links for buying figs

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -36,7 +36,7 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/8/3 -->
-<!-- updated 2024/2/20 -->
+<!-- updated 2024/3/15 -->
 <h1>Fun and Useful Links to Elsewhere<span id="Fun-and-Useful-Links-to-Elsewhere"></span></h1>
 <details>
 <summary><span style="font-size: 130%;">Startpage Links</span></summary>
@@ -194,31 +194,52 @@
 </ul>
 </li>
 </ul>
-<p><strong>misc</strong> —</p>
+<p><strong>import hobby goods</strong> —</p>
+<ul>
+<li>Online shops where I buy Vocaloid stuff, <code>(scale|articulated|prize)</code> figures, plushies, BDs, CDs, games, etc.
+<ul>
+<li><a href="https://www.hlj.com/search/?SeriesID2=Vocaloid&amp;Page=1&amp;Sort=rss+desc&amp;GenreCode2=Action+Figures&amp;GenreCode2=Dolls&amp;GenreCode2=Trading+Figures&amp;GenreCode2=Figures">HobbyLink Japan: Vocaloid, recently added</a>
+<ul>
+<li><em>Pre-order and new in-stock, recently added preorders for Vocaloid scales, articulated figures, prizes, plushies.</em></li>
+</ul>
+</li>
+<li><a href="https://www.amiami.com/eng/search/list/?s_keywords=vocaloid&amp;s_st_condition_flg=1">AmiAmi: Vocaloid, pre-owned items</a>
+<ul>
+<li><em>Pre-owned Vocaloid scales, articulated figures, prizes, etc.</em></li>
+</ul>
+</li>
+<li><a href="https://order.mandarake.co.jp/order/listPage/list?keyword=Vocaloid&amp;lang=en">Mandarake: Vocaloid, pre-owned items</a>
+<ul>
+<li><em>Pre-owned Vocaloid scales, articulated figures, prizes, plushies, doujins, etc.</em></li>
+</ul>
+</li>
+<li>Suruga-ya.com (Int’l): <a href="https://www.suruga-ya.com/en/products?keyword=vocaloid">VOCALOID*</a>, <a href="https://www.suruga-ya.com/en/products?keyword=hatsune+miku">Hatsune Miku</a>, <a href="https://www.suruga-ya.com/en/products?keyword=project+diva">Project DIVA</a>
+<ul>
+<li><em>Pre-owned Vocaloid stuff, all of the above, including limited run merchandise like doujinshi, doujin music, keychains, clothes, etc.</em></li>
+<li><em>Their search engine is awful, Vocaloid exists across at least 7 categories, this should cover all of them.</em></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<p><strong>shopping</strong> —</p>
+<ul>
+<li><a href="https://diskprices.com">disk prices</a>
+<ul>
+<li><em>Automatically curated list of new/used disk storage prices on Amazon.com for various countries.</em></li>
+</ul>
+</li>
+</ul>
+<p><strong>tools</strong> —</p>
 <ul>
 <li><a href="https://twofactor.date">twofactor.date</a>
 <ul>
 <li><em>Generate TOTP codes from 2FA keys in QR or <code>otpauth://</code> format in your web browser without any authenticator phone app.</em></li>
 </ul>
 </li>
-<li><a href="https://diskprices.com">disk prices</a>
-<ul>
-<li><em>Automatically curated list of new/used disk storage prices on Amazon.com for various countries.</em></li>
-</ul>
-</li>
 <li><a href="https://keyboardsimulator.xyz">Keyboard Simulator</a>
 <ul>
 <li><em>3D custom mechanical keyboard simulator, lets you experiment with color schemes and combining keycap sets.</em></li>
-</ul>
-</li>
-<li><a href="https://www.sudomemo.net">sudomemo</a>
-<ul>
-<li><em>A revival of <a href="https://en.wikipedia.org/wiki/Flipnote_Studio">Flipnote Hatena</a>, a 2010s online hosting service for Nintendo DSi/3DS Flipnote Studio animations.</em></li>
-</ul>
-</li>
-<li><a href="https://ynoproject.net">Yume Nikki Online Project</a>
-<ul>
-<li><em>Play the classic surreal atmospheric walking sim <strong>Yume Nikki</strong> and its many fangames, with friends, in your browser.</em></li>
 </ul>
 </li>
 <li><a href="https://poyopoyo.gifanimaker.com">poyopoyo gif maker</a></li>
@@ -258,16 +279,6 @@
 <li><em>So you can buy a stuffed IKEA shark and immediately derail any thread on 4chan.</em></li>
 </ul>
 </li>
-<li><a href="http://info.cern.ch/">The World Wide Web Project</a>
-<ul>
-<li><em>Browse the first ever web page, romanticized history and opinions on the creation of the WWW at CERN between 1989-1993.</em></li>
-</ul>
-</li>
-<li><a href="https://neal.fun/internet-artifacts/">Neal.fun: Internet Artifacts</a>
-<ul>
-<li><em>Interactive exhibit of cultural milestones in the early days of the World Wide Web.</em></li>
-</ul>
-</li>
 <li><a href="https://globe.adsbexchange.com/">ADS-B Exchange</a>
 <ul>
 <li><em>View live air traffic and aircraft flight paths in your area, or anywhere in the world.</em></li>
@@ -276,6 +287,29 @@
 <li><a href="https://zenius-i-vanisher.com/v5.2/arcades.php">Zenius-I-vanisher.com Arcade Machine Locator</a>
 <ul>
 <li><em>Database of arcade businesses and arcade machine locations, covers a wide variety of eastern and western game series.</em></li>
+</ul>
+</li>
+</ul>
+<p><strong>misc</strong> —</p>
+<ul>
+<li><a href="https://www.sudomemo.net">sudomemo</a>
+<ul>
+<li><em>A revival of <a href="https://en.wikipedia.org/wiki/Flipnote_Studio">Flipnote Hatena</a>, a 2010s online hosting service for Nintendo DSi/3DS Flipnote Studio animations.</em></li>
+</ul>
+</li>
+<li><a href="https://ynoproject.net">Yume Nikki Online Project</a>
+<ul>
+<li><em>Play the classic surreal atmospheric walking sim <strong>Yume Nikki</strong> and its many fangames, with friends, in your browser.</em></li>
+</ul>
+</li>
+<li><a href="http://info.cern.ch/">The World Wide Web Project</a>
+<ul>
+<li><em>Browse the first ever web page, romanticized history and opinions on the creation of the WWW at CERN between 1989-1993.</em></li>
+</ul>
+</li>
+<li><a href="https://neal.fun/internet-artifacts/">Neal.fun: Internet Artifacts</a>
+<ul>
+<li><em>Interactive exhibit of cultural milestones in the early days of the World Wide Web.</em></li>
 </ul>
 </li>
 </ul>
@@ -303,7 +337,7 @@
 </li>
 </ul>
 <p>A mix of my startpage links and random bookmarks you might find useful.<br/>
-Updated 🌘 Tue, Feb 20th, 2024</p>
+Updated 🌖 Fri, Mar 15th, 2024</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
