notes/figures, notes/useful-links: nothing important

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2024/3/15 -->
+<!-- updated 2024/3/29 -->
 <h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
-<p>Last updated 🌖 Fri, Mar 15th, 2024</p>
+<p>Last updated 🌒 Fri, Mar 29th, 2024</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
 Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=0Nh-k8OXhCo">“skill” claw machine</a>, these are more modest and less ambitious in detail, character pose, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more far more expensive figures in one or more of these categories.</p>
 <p>I live an ocean away from the easternmost archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild.
@@ -149,6 +149,7 @@ var figs = [
 	 * MFC ids prepended with x are knockoffs
 	 */
 
+	[ 'p1764164', 'be850', 'good smile huggy miku trading fig (2023)' ],
 	[ 'p1956669', '12734', 'good smile miku v3 nendoroid #2360 (2024)' ],
 	[ '287708', 'e0015', 'good smile gochiusa kafu chino nendo #558 (2017)' ],
 	[ 'p1876376', '23b1e', 'good smile cinnamoroll miku nendo #2306 (2024)' ],
