--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -242,7 +242,16 @@
 <li><em>3D custom mechanical keyboard simulator, lets you experiment with color schemes and combining keycap sets.</em></li>
 </ul>
 </li>
-<li><a href="https://poyopoyo.gifanimaker.com">poyopoyo gif maker</a></li>
+<li><a href="https://opentaxsolver.sourceforge.net">OpenTaxSolver</a>
+<ul>
+<li><em>FOSS calculator that generates U.S. federal/state income tax returns, supports GUI and plaintext editor usage.</em></li>
+</ul>
+</li>
+<li><a href="https://poyopoyo.gifanimaker.com">poyopoyo gif animaker</a>
+<ul>
+<li><em>Generates lively and befuddling animated GIFs of static images, great for shitposting.</em></li>
+</ul>
+</li>
 <li><a href="https://www.star.nesdis.noaa.gov/GOES">NOAA GOES</a>
 <ul>
 <li><em>Near-live weather animations from US NOAA weather satellites.</em></li>
